[package]
name = "async-scheduler"
version = "0.1"
authors = [""]
edition = "2018"

documentation = "https://docs.rs/tokio_cron_scheduler/"
repository = "https://github.com/mvniekerk/tokio-cron-scheduler"

description = "Schedule tasks on tokio using cron-like annotation"

license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["cron", "crontab", "scheduler", "job", "tokio", "async"]

categories = ["date-and-time"]

[dependencies]
tokio = { version = "1", features = ["full"] }
cron = "0.9.0"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1.48"
lazy_static = "1.4.0"
async-std ="1.9"
